# fGB

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compiler.c  cpu.cc  extended_instructions.c  fgb.c  fgb.cc  instruction_tables.c  instructions.c  mmu.cc
cpu/: cpu.cc
include/: compiler.h  cpu.h  cpu.hh  emitter.h  extended_instructions.h  instruction_tables.h  instructions.h  mmu.hh
include/cpu/: cpu.hh
include/jit/: block.hh  compiler.hh  emitter.hh  generic_block.hh  generic_compiler.hh  generic_emitter.hh  instructions.hh
include/jit/amd64/: amd64_block.hh  amd64_emitter.hh
include/mmu/: mmu.hh
include/termui/: colors.h
jit/: block.cc  compiler.cc  emitter.cc  generic_block.cc  generic_compiler.cc  generic_emitter.cc
jit/amd64/: amd64_block.cc  amd64_emitter.cc
mmu/: mmu.cc
